# steam-to-sqlite

./: LICENSE  README.md  alembic.ini  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: main.yml  test.yml
datasette-data/: metadata.json
migrations/: env.py
migrations/versions/: 06463ae1af1e_add_price.py  678f3de91b2a_correct_nullability.py  fb8ce6ce7c6b_init.py
scripts/: uploader.py
steam2sqlite/: __init__.py  handler.py  main.py  models.py  navigator.py  utils.py
test_data/: 620.json  620_achievements.json  659.json  app_list_limited.json
tests/: test_handler.py  test_main.py  test_navigator.py  test_steam2sqlite.py  test_util.py
