[tool.poetry]
name = "steam2sqlite"
version = "0.1.0"
description = ""
authors = ["Ben Falk <falk.ben@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
sqlmodel = "^0.0.5"
httpx = "^0.21.1"
uvloop = "^0.16.0"
python-dotenv = "^0.19.2"
loguru = "^0.5.3"
datasette = "^0.59.4"
datasette-publish-vercel = "^0.12"
dropbox = "^11.25.0"
alembic = "^1.7.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"
datasette-vega = "^0.6.2"
datasette-graphql = "^2.0"
black = "^21.12b0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
