[tool.poetry]
name = "steam2sqlite"
version = "0.1.0"
description = ""
authors = ["Ben Falk <falk.ben@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
sqlmodel = "^0.0.5"
httpx = "^0.22.0"
uvloop = "^0.16.0"
python-dotenv = "^0.19.2"
loguru = "^0.6.0"
datasette = "^0.60"
datasette-publish-vercel = "^0.13"
dropbox = "^11.28.0"
alembic = "^1.7.6"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
pytest-asyncio = "^0.18.2"
datasette-vega = "^0.6.2"
datasette-graphql = "^2.0"
black = "^22.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
