[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "steam2sqlite"
version = "0.1.0"
authors = [{ name = "Ben Falk", email = "falk.ben@gmail.com" }]
description = "Public Steam app and achievement data in a sqlite database"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "sqlmodel",
    "httpx",
    "uvloop",
    "python-dotenv",
    "loguru",
    "datasette",
    "datasette-publish-fly",
    "dropbox",
    "alembic",
    "pydantic<2",
    "sqlalchemy<2",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "datasette-vega",
    "datasette-graphql",
    "ruff",
    "pytest-cov",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"                           # https://github.com/pytest-dev/pytest-asyncio#auto-mode
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
extend-exclude = ["migrations"]
